<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seeds</string>
    <string name="action_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Categories</item>
        <item>My Campaign</item>
        <!--
        <item>Trending</item>
        <item>How it Works</item>
        <item>Start Campaign</item>
        <item>Settings</item>
        -->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/featured</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="menu_logout">Logout</string>

    <string-array name="spinner_array">
        <item>ARTS</item>
        <item>TECHNOLOGY</item>
        <item>SMALL BUSINESS</item>
        <item>HEALTH/MEDICALS</item>
        <item>ENVIRONMENT</item>
        <item>OTHERS</item>
    </string-array>

    <string name="coffee_however_you_like_it">Coffee, However You Like It</string>
    <string name="add_image">Add Image</string>
    <string name="details">Details</string>
    <string name="drop_details_for_your_campaign">Drop Details for your Campaign</string>
    <string name="start_campaign">Start Campaign</string>
    <string name="days">Days</string>
    <string name="number_of_days_">Number of Days:</string>
    <string name="funding_duration">Funding Duration</string>
    <string name="selected_path">selected path</string>
    <string name="title">Title</string>
    <string name="thumnail_of_campaign">Thumnail of campaign</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <!--
                 <string name="app_name">Seeds</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thumnail_of_campaign">thumnail of campaign</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    -->
    <string name="noConnection">Unable to connect, check your Network Connection</string>
    <string name="title_activity_campaign_display">CampaignDisplayActivity</string>
    <string name="action_share">Share</string>
    <string name="action_new">New Campaign</string>
    <string name="action_edit">Edit</string>
    <string name="action_discard">Discard</string>
    <string name="action_accept">Accept</string>
    <string name="action_donate">Donate</string>
    <string name="action_comment">Comment</string>
    <string name="placeHolder">PlaceHolder for Campaign Image</string>
    <string name="description_text">Description Text</string>
    <string name="title_activity_add__edit">Add_EditActivity</string>

</resources>
