<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

<!-- was up inside     tools:context="com.diadementi.seeds.CampaignDisplayActivity" -->
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="always"
        android:title="@string/action_discard">
    </item>

</menu>