<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/bg_color"
    android:orientation="horizontal"
    android:weightSum="1" >

    <!-- Product id (pid) - will be HIDDEN - used to pass to other activity -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_weight="0.7"
        android:contentDescription="@string/thumnail_of_campaign"
        android:src="@drawable/ic_communities" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_margin="10dp"
        android:layout_weight="0.3"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:gravity="end"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</LinearLayout>